src/objects/Track__c.object
<CustomObject>
    <fields>
        <fullName>Album__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Album</label>
        <referenceTo>Album__c</referenceTo>
        <relationshipLabel>Tracks</relationshipLabel>
        <relationshipName>Tracks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Genre</label>
        <referenceTo>Genre__c</referenceTo>
        <relationshipName>Tracks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track_Id__c</fullName>
        <label>Track_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Name__c</fullName>
        <label>Track Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Album__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Album</label>
        <referenceTo>Album__c</referenceTo>
        <relationshipLabel>Tracks (User Album)</relationshipLabel>
        <relationshipName>Tracks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Track</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Track_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TrackId-{00000}</displayFormat>
        <label>TrackId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracks</pluralLabel>
    <recordTypes>
        <fullName>Author_Tracks</fullName>
        <active>true</active>
        <label>Author Tracks</label>
    </recordTypes>
    <recordTypes>
        <fullName>Movie_Tracks</fullName>
        <active>true</active>
        <label>Movie Tracks</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>